force-app/main/default/objects/OrderItem/fields/BillingTerm__c.field-meta.xml
<CustomField>
    <fullName>BillingTerm__c</fullName>
    <formula>IF( ISPICKVAL(SBQQ__ChargeType__c,&quot;One-Time&quot;),null, 
  CASE(TEXT( SBQQ__BillingFrequency__c ), 
    &quot;Monthly&quot;, 1,
    &quot;Quarterly&quot;, 3,
    &quot;Semiannual&quot;, 6,
    &quot;Annual&quot;, 12, 
    &quot;Invoice Plan&quot;,1,
    1
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>