force-app/main/default/objects/OrderItem/fields/CarryoverFactor__c.field-meta.xml
<CustomField>
    <fullName>CarryoverFactor__c</fullName>
    <label>Carryover Factor</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>