force-app/main/default/objects/OrderItem/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>Stores the system date to trigger usage accumulation.</description>
    <inlineHelpText>Stores the system date to trigger usage accumulation.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>