force-app/main/default/objects/OrderItem/fields/HasUsageMeters__c.field-meta.xml
<CustomField>
    <fullName>HasUsageMeters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Usage Meters</label>
    <type>Checkbox</type>
</CustomField>