force-app/main/default/objects/OrderItem/fields/IncludedUsageCredits__c.field-meta.xml
<CustomField>
    <fullName>IncludedUsageCredits__c</fullName>
    <label>Included Usage Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>