force-app/main/default/objects/OrderItem/fields/MainMatchingAttribute__c.field-meta.xml
<CustomField>
    <fullName>MainMatchingAttribute__c</fullName>
    <label>Main Matching Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>