force-app/main/default/objects/OrderItem/fields/MainUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>MainUnitOfMeasure__c</fullName>
    <label>Main Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__UnitOfMeasure</valueSetName>
    </valueSet>
</CustomField>