force-app/main/default/objects/OrderItem/fields/OverrideEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>OverrideEffectiveDate__c</fullName>
    <label>Override Effective Date</label>
    <type>Date</type>
</CustomField>